# gotrippee

./: README.md  pyproject.toml
gotrippee/: demo.py
gotrippee/distance/: __init__.py  cache.py  osrm.py
gotrippee/domain/: models.py
gotrippee/planner/: __init__.py  naive.py
tests/: test_demo.py  test_distance_cache.py  test_models.py  test_naive_planner.py  test_osrm_distance.py  test_planner.py
